// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabbedView />  Snapshot should match snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  padding: 0;
  max-width: 100%;
  clear: left;
  float: left;
  background-color: transparent;
  margin: 0 0 24px 0;
}

.c1 {
  border: none;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 56px;
  line-height: 1.5;
  min-width: 90px;
  outline: none;
  overflow: hidden;
  position: relative;
  text-align: center;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out;
  border-bottom: 1px solid #e0e0e0;
  background-color: transparent;
  font-size: 16px;
  color: inherit;
  padding: 16px;
}

.c1[aria-selected='true'] {
  border-bottom: 1px solid #1250C4;
  color: #1250C4;
  cursor: default;
}

.c1[aria-selected='true']::after {
  content: ' ';
  background-color: #1250C4;
  position: absolute;
  left: 0px;
  bottom: 0px;
  height: 3px;
  border-radius: 4px 4px 0 0;
  width: 100%;
}

.c1:hover {
  color: #1250C4;
  border-bottom: 1px solid #1250C4;
  background-color: #E5EDFC;
}

.c1:focus {
  color: #1250C4;
  border: 1px solid #1250C4;
  background-color: #E5EDFC;
  padding: 15px;
}

.c2 {
  vertical-align: top;
}

@media (min-width:1024px) {
  .c0 {
    overflow-x: auto;
  }
}

<nav
  class="c0"
  role="tablist"
>
  <button
    aria-controls="example-panel"
    aria-selected="true"
    class="c1"
    id="example-tab"
    role="tab"
  >
    <span
      class="c2"
    >
      example
    </span>
  </button>
</nav>
`;

exports[`<TabbedView />  Snapshot should match snapshot with badges and icons 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  padding: 0;
  max-width: 100%;
  clear: left;
  float: left;
  background-color: transparent;
  margin: 0 0 24px 0;
}

.c1 {
  border: none;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 56px;
  line-height: 1.5;
  min-width: 90px;
  outline: none;
  overflow: hidden;
  position: relative;
  text-align: center;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out;
  border-bottom: 1px solid #e0e0e0;
  background-color: transparent;
  font-size: 16px;
  color: inherit;
  padding: 16px;
}

.c1[aria-selected='true'] {
  border-bottom: 1px solid #1250C4;
  color: #1250C4;
  cursor: default;
}

.c1[aria-selected='true']::after {
  content: ' ';
  background-color: #1250C4;
  position: absolute;
  left: 0px;
  bottom: 0px;
  height: 3px;
  border-radius: 4px 4px 0 0;
  width: 100%;
}

.c1:hover {
  color: #1250C4;
  border-bottom: 1px solid #1250C4;
  background-color: #E5EDFC;
}

.c1:focus {
  color: #1250C4;
  border: 1px solid #1250C4;
  background-color: #E5EDFC;
  padding: 15px;
}

.c2 {
  vertical-align: top;
}

.c3 {
  margin-left: 0px;
  margin-right: -8px;
  display: inline-block;
  vertical-align: top;
}

.c6 {
  display: inline-block;
  height: 24px;
  margin-left: 0px;
  margin-right: 8px;
  width: 24px;
}

.c4 {
  display: inline-block;
  margin-left: 8px;
  margin-right: 8px;
}

.c5 {
  border-radius: 8px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  line-height: 24px;
  min-width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 12px;
  padding-left: 2px;
  padding-right: 2px;
  background-color: #f2f2f2;
  color: #424242;
}

@media (min-width:1024px) {
  .c0 {
    overflow-x: auto;
  }
}

<nav
  class="c0"
  role="tablist"
>
  <button
    aria-controls="with-badge-panel"
    aria-selected="true"
    class="c1"
    id="with-badge-tab"
    role="tab"
  >
    <span
      class="c2"
    >
      With badge
    </span>
    <div
      class="c3"
    >
      <div
        class="c4"
        value="4"
      >
        <span
          class="c5"
          value="4"
        >
          4
        </span>
      </div>
    </div>
  </button>
  <button
    aria-controls="with-icon-panel"
    aria-selected="false"
    class="c1"
    id="with-icon-tab"
    role="tab"
  >
    <div
      class="c6"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="StarIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </div>
    <span
      class="c2"
    >
      With icon
    </span>
  </button>
  <button
    aria-controls="with-icon and badge-panel"
    aria-selected="false"
    class="c1"
    id="with-icon and badge-tab"
    role="tab"
  >
    <div
      class="c6"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="StarIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
        />
      </svg>
    </div>
    <span
      class="c2"
    >
      With icon and badge
    </span>
    <div
      class="c3"
    >
      <div
        class="c4"
        value="4"
      >
        <span
          class="c5"
          value="4"
        >
          4
        </span>
      </div>
    </div>
  </button>
  <button
    aria-controls="with-only text-panel"
    aria-selected="false"
    class="c1"
    id="with-only text-tab"
    role="tab"
  >
    <span
      class="c2"
    >
      With only text
    </span>
  </button>
</nav>
`;

exports[`<TabbedView />  Snapshot should match snapshot with fluid option 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  padding: 0;
  max-width: 100%;
  clear: left;
  float: left;
  background-color: transparent;
  margin: 0 0 24px 0;
  width: 100%;
  overflow-x: scroll;
}

.c1 {
  border: none;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 56px;
  line-height: 1.5;
  min-width: 90px;
  outline: none;
  overflow: hidden;
  position: relative;
  text-align: center;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out;
  border-bottom: 1px solid #e0e0e0;
  background-color: transparent;
  font-size: 16px;
  color: inherit;
  padding: 16px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  width: 33.33%;
}

.c1[aria-selected='true'] {
  border-bottom: 1px solid #1250C4;
  color: #1250C4;
  cursor: default;
}

.c1[aria-selected='true']::after {
  content: ' ';
  background-color: #1250C4;
  position: absolute;
  left: 0px;
  bottom: 0px;
  height: 3px;
  border-radius: 4px 4px 0 0;
  width: 100%;
}

.c1:hover {
  color: #1250C4;
  border-bottom: 1px solid #1250C4;
  background-color: #E5EDFC;
}

.c1:focus {
  color: #1250C4;
  border: 1px solid #1250C4;
  background-color: #E5EDFC;
  padding: 15px;
}

.c2 {
  vertical-align: top;
}

@media (min-width:1024px) {
  .c0 {
    overflow-x: auto;
  }
}

<nav
  class="c0"
  role="tablist"
>
  <button
    aria-controls="candidates-panel"
    aria-selected="true"
    class="c1"
    id="candidates-tab"
    role="tab"
  >
    <span
      class="c2"
    >
      Candidates
    </span>
  </button>
  <button
    aria-controls="companies-panel"
    aria-selected="false"
    class="c1"
    id="companies-tab"
    role="tab"
  >
    <span
      class="c2"
    >
      Companies
    </span>
  </button>
  <button
    aria-controls="education-panel"
    aria-selected="false"
    class="c1"
    id="education-tab"
    role="tab"
  >
    <span
      class="c2"
    >
      Education
    </span>
  </button>
</nav>
`;
